--- a/src/main/resources/templates/pianoFormativo/pianoFormativoShowAll.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoShowAll.html
@@ -23,7 +23,7 @@
 
 					<th:block th:if="${accreditamentoWrapper.accreditamento.pianoFormativo != null and !#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo.eventiPianoFormativo)}">
 						<th:block th:each="evento, row : ${accreditamentoWrapper.accreditamento.pianoFormativo.eventiPianoFormativo}">
-							<h2 th:text="#{label.evento} + ': ' + ${evento.titolo}">label.componente_comitato</h2>
+							<h2 th:text="#{label.evento} + ': ' + ${evento.titolo} + ', Id: ' + ${evento.getCodiceIdentificativo()}">label.componente_comitato</h2>
 							<div th:unless="${row.last}" class="divider-dashed"></div>
 							<div th:id="evento+${evento.id}+Block" class="container-collapse" role="iterEvento" th:attr="data-valore-id=${evento.id}"></div>
 						</th:block>
